# cppokemon

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
UML/: output.puml
data/: leaders.csv
includes/: main.h
libs/game/includes/: battle.h  game.h  gameData.h  leader.h  master.h  player.h  trainer.h
libs/game/src/: battle.cpp  game.cpp  gameData.cpp  trainer.cpp
libs/pokemon/includes/: pokemon.h
libs/pokemon/src/: pokemon.cpp
libs/pokemons/includes/: pokemon.h  pokemonEau.h  pokemonFeu.h  pokemonGen.h  pokemonPlante.h  pokemons.h
libs/pokemons/src/: pokemon.cpp  pokemonEau.cpp  pokemonFeu.cpp  pokemonGen.cpp  pokemonPlante.cpp
libs/utils/includes/: utils.h
libs/utils/src/: utils.cpp
src/: main.cpp
